2015-02-03  Renlin Li  <renlin.li@arm.com>

	* doc/c-aarch64.texi (.arch): Document the directive.
	(.arch_extension): Likewise.

2014-11-18  Jan Beulich  <jbeulich@suse.com>

	* config/tc-aarch64.c (s_aarch64_arch_extension): New.
	(md_pseudo_table): Add arch_extension.
	(aarch64_parse_features): New parameter "ext_only". Handle it.
	(aarch64_parse_cpu, aarch64_parse_arch, s_aarch64_cpu,
	s_aarch64_arch): Pass FALSE as new third argument of
	aarch64_parse_features().

2015-01-07  Jan Beulich <jbeulich@suse.com>

	* config/tc-arm.c (struct arm_option_extension_value_table):
	Split field "value" into fields "merge_value" and "clear_value".
	(arm_extensions): Adjust initializer accordingly.

2015-06-17  Nicolas Pitre <nico@linaro.org>

	* as.c (show_usage): Document --sectname-subst.
	(parse_args): Add --sectname-subst.
	* as.h (flag_sectname_subst): New.
	* config/obj-elf.c (obj_elf_section_name): Add %S substitution.
	* doc/as.texinfo: Document it.

2014-12-23  Tristan Gingold  <gingold@adacore.com>

	* configure: Regenerate.

2014-12-23  Tristan Gingold  <gingold@adacore.com>

	* configure: Regenerate.

2014-12-19  Matthew Fortune  <matthew.fortune@imgtec.com>

	* config/tc-mips.c (md_apply_fix): Apply alignment check
	to the symbol and offset rather than *valP for
	BFD_RELOC_MIPS_18_PCREL_S3.  Also update the error message
	for BFD_RELOC_MIPS_19_PCREL_S2.

2014-11-18  Igor Zamyatin  <igor.zamyatin@intel.com>

	* config/tc-i386-intel.c (i386_operator): Remove last argument
	from lex_got call.
	* config/tc-i386.c (reloc): Remove bnd_prefix from parameters'
	list.  Return always BFD_RELOC_32_PCREL.
	* (output_branch): Remove condition for BFD_RELOC_X86_64_PC32_BND.
	* (output_jump): Update call to reloc accordingly.
	* (output_interseg_jump): Likewise.
	* (output_disp): Likewise.
	* (output_imm): Likewise.
	* (x86_cons_fix_new): Likewise.
	* (lex_got): Remove bnd_prefix from parameters' list in macro and
	declarations. Don't use BFD_RELOC_X86_64_PLT32_BND.